<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/playlist_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/playlist_name"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/playlist_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/playlist_description"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/playlist_rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/playlist_rating"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/playlist_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/playlist_genre"
            android:textSize="18sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>